# AviSynth-FillBorders

./: CHANGELOG.md  CMakeLists.txt  FillBorders.vcxproj  FillBorders.vcxproj.filters  README.md
msvc/: FillBorders.vcxproj  FillBorders.vcxproj.filters
src/: FillBorders.cpp  FillBorders.rc
